# simfix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
simfix/: __init__.py  analyzer.py  cli.py  cmake.py  commands.py  compatibility.py  conda_environment.py  conda_fixer.py  cuda.py  cuda_docker.py  dependency_discovery.py  docker_runner.py  dockerfile.py  fixer.py  git_assets.py  install_commands.py  planner.py  pypi.py  pyproject.py  python_requirements.py  recommendation_types.py  recommendations.py  repo.py  report.py  ros_docker.py  ros_environment.py  ros_package.py  setup_py.py  system.py  system_capabilities.py  system_docker.py  vendor_dependencies.py  workspace_summary.py
tests/: test_basic.py
