[project]
name = "simfix"
version = "0.1.0"
description = "A smart dependency checker and installer assistant for simulator repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Habib ur Rehmaan" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "requests>=2.31",
  "pyyaml>=6.0",
  "uv>=0.5",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.0",
  "ruff>=0.8",
]

[project.scripts]
simfix = "simfix.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
