[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simfix"
version = "0.1.4"
description = "A dependency checker and installation assistant for simulator repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Habib ur Rehmaan", email = "h.rehmaan96@gmail.com" }
]
keywords = [
    "simulator",
    "dependencies",
    "installation",
    "docker",
    "cuda",
    "ros",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "rich",
    "typer",
    "requests",
    "packaging",
    "pyyaml",
    "uv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[project.scripts]
simfix = "simfix.cli:app"

[tool.setuptools.packages.find]
include = ["simfix*"]
exclude = ["workspace*"]

[project.urls]
Homepage = "https://github.com/hrehmaan/simfix"
Repository = "https://github.com/hrehmaan/simfix"
Issues = "https://github.com/hrehmaan/simfix/issues"
